--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
+<body
+  style="margin: 0em;"
+>
   <div id="app">app will appear here</div>
   <script src="bundle.js"></script>
 </body>
