--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="https://kit.fontawesome.com/e47c74e3bf.js" crossorigin="anonymous"></script>
 </head>
 <body
   style="margin: 0em;"
