--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,10 +7,12 @@
   content="minimum-scale=1, initial-scale=1, width=device-width"
   />
   <title>Document</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
   <script src="https://kit.fontawesome.com/e47c74e3bf.js" crossorigin="anonymous"></script>
 </head>
 <body
-  style="margin: 0em;"
+  style="margin: 0em; font-family:  Roboto Condensed, sans-serif;"
+  
 >
   <div id="app">app will appear here</div>
   <script src="bundle.js"></script>
